Prepare starter code

--- a/src/FancyBorder.css
+++ b/src/FancyBorder.css
@@ -3,5 +3,5 @@
   padding: 10px 30px;
   box-shadow: 5px 5px 2px rgb(143, 139, 135);
   border-radius: 15px;
-  background: rebeccapurple;
+  background: rgb(152, 97, 208);
 }
